fix version selector dropdown on mobile

--- a/assets/src/scss/2-vendors/custom-bootstrap/_yii-button-groups.scss
+++ b/assets/src/scss/2-vendors/custom-bootstrap/_yii-button-groups.scss
@@ -22,6 +22,16 @@ $yii-btn-border-radius-base: 6px;
   }
 }
 
+.btn-group {
+  @media (max-width: 767px)  {
+    &:last-child {
+      .dropdown-menu {
+        right: 0;
+      }
+    }
+  }
+}
+
 // Prevent double borders when buttons are next to each other
 .btn-group {
   .btn + .btn,
